page discoBio MAJ + FIX truncate table album

--- a/public/assets/css/discoBio.css
+++ b/public/assets/css/discoBio.css
@@ -6,6 +6,13 @@
     flex-direction: column;
     align-items: center;
 }
+.contenu-discobio::-webkit-scrollbar {
+    display: none;
+  }
+.contenu-discobio {
+    -ms-overflow-style: none; 
+    overflow: -moz-scrollbars-none; 
+}
 .bio {
     min-height: fit-content;
     width: 50vw;
@@ -29,6 +36,7 @@
 }
 img.card-img-top{
     padding: 0.5rem;
+    min-width: 250px;
 }
 a.btn.btn-primary{
     background-color: var(--bleu);
@@ -44,4 +52,7 @@ h5.card-title {
 }
 p.card-text {
     margin-bottom: 0.5rem;
+}
+.bio p {
+    margin-bottom: 4rem;
 }
